<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/chat_background"
    android:fitsSystemWindows="true"
    tools:ignore="ContentDescription">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/chat_background"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/collapsingToolbarLayoutLargeSize"
            android:background="@color/chat_background"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@drawable/bg_chat_toolbar"
                app:layout_collapseMode="pin"
                app:navigationIcon="?attr/homeAsUpIndicator"
                app:navigationIconTint="@color/chat_text_primary"
                app:title="@string/compile_log_title_last"
                app:titleTextColor="@color/chat_text_primary" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/err_vScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:fillViewport="true"
        android:background="@color/chat_surface"
        android:paddingBottom="50dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <HorizontalScrollView
            android:id="@+id/err_hScroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_compile_log"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingBottom="48dp"
                android:textColor="@color/chat_text_primary"
                android:textSize="11sp"
                android:typeface="monospace"
                tools:text="Errors will show up here" />
        </HorizontalScrollView>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/noContentLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/chat_background"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="24dp"
        android:paddingBottom="100dp"
        android:visibility="gone"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/compile_log_empty_title"
            android:textColor="@color/chat_text_primary"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:text="@string/compile_log_empty_message"
            android:textColor="@color/chat_text_secondary"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/optionsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="10dp"
        android:animateLayoutChanges="true"
        android:gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/formatButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/compile_log_action_format"
            android:src="@drawable/ic_mtrl_formattext"
            app:backgroundTint="@color/chat_accent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/clearButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/compile_log_action_clear"
            android:src="@drawable/ic_mtrl_delete"
            app:backgroundTint="@color/chat_accent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/aiExplainButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/compile_log_action_ai_explain"
            android:src="@drawable/selector_info_popup"
            app:backgroundTint="@color/chat_accent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/aiFixButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/compile_log_action_ai_fix"
            android:src="@drawable/ic_mtrl_edit"
            app:backgroundTint="@color/chat_accent" />



    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>

